--- a/Python/標準機能/デコレータ.md
+++ b/Python/標準機能/デコレータ.md
@@ -3,7 +3,7 @@
 # Decoraterを使い倒せ
 
 `Decorater` は、ソースコードを書き換えずに既存の関数に変更を加えたいときに使う。
-`@<関数名>` で任意の関数に変更を反映させることが出来る。（厳密には反映ではなく、新しく作るが。）
+`@<関数名>` で任意の関数に変更を反映させることが出来る。（厳密には反映ではなく、新しく作成しているが。）
 
 主にデバッグ用とかで関数の中身を知りたいときとかに使ったり、Webアプリとかでログイン機能を追加したりするときに使う。
 
