--- a/情報工学基礎/情報工学基礎.md
+++ b/情報工学基礎/情報工学基礎.md
@@ -1,7 +1,16 @@
 #情報工学
 
-# LINK
+# アルゴリズム
 
-- [[NFT]]
+- [[SHA]]
+
+## 暗号理論
+
 - [[認証と認可]]
-- [[ブロックチェーン]]
+
+## Block Chain
+
+- [[BitCoin]]
+- [[Block Chain]]
+- [[NFT]]
+
