:+1:Add ISSUE TEMPLATES

--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -1,29 +1,25 @@
 [ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)ようこそ！
+
 **〜ポエム90%、ちょっと役立つ情報10%のナレッジベース〜**
-
-
 
 # ぼくはだれ？
 
 実務3年目のWebエンジニア（サーバーサイド）です。GCPでWebアプリを作っていました。
 一番辛かったアプリケーションは25個のKPIを評価するBIツールです。
-[HighCharts](https://www.highcharts.com/)というグラフを綺麗に描画できるJavaScriptのライブラリと、[Flask](https://flask.palletsprojects.com/en/2.0.x/) を用いてGCPで分析ツールを作ってました。
+[HighCharts](https://www.highcharts.com/)というグラフを綺麗に描画できるJavaScriptのライブラリと、[Flask](https://flask.palletsprojects.com/en/2.0.x/) といPythonのWebサーバー用のライブラリを使ってGCPで分析ツールを作ってました。
 
 得意言語は`Python`です。
 [[TypeScript]]も少し。
 
-なのでこのサイトも基本的にはすべてのパイソニアに捧ぐパイソニアのためのナレッジベースになると思います。（GCPもAWSも基本はすべてPythonで書きます。）
+基本的にはすべてのパイソニアに捧ぐパイソニアのためのナレッジベースになると思います。（GCPもAWSも基本はすべてPythonで書きます。）
 
 これまで、起きている間はずっと仕事、という絵に書いたようなブラックIT企業を渡り歩いてました。
-
 自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら転職活動を始めたところ、今の会社が拾ってくれました。（感謝しかない）
 
 おかげで、可処分時間が増えたので、これまで課題だなあ、と思っていたドキュメント化を進めたり、技術や理論について考える余裕が生まれました。
 
 まっ、どうせならやるならブログ兼技術サイトみたいなのを運営して、
 モチベーションも維持しながら、伝わる文章の書き方について研究するのもいいなあと思い[ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)を始めました。
-
-このサイトは、これまで学んだことを中心に発信していくブログのよう雰囲気で作っていくつもりです。
 
 主に[[技術]] や[[趣味]]、あと僕の話を少し発信したり、アナリスト見習いなので、
 統計についての知見もまとめていこうと思います。
@@ -34,7 +30,6 @@
 
 ナレッジベースとはもともと、「業務に関する知見」を一箇所にまとめたデータベースのことのようですが、
 ここでは「僕のこれまでの人生において見出したすべての事に関する知見」を一箇所にまとめてデータベースとしたいと考えています。
-
 
 僕はもともとナレッジベースに強い関心がありました。
 これまで[Evernote](https://evernote.com/intl/jp)や[Notion](https://www.notion.so/product?fredir=1)、[Scrapbox](https://scrapbox.io/product)、[Growi(Wiki)](https://growi.cloud/)、あと[ガルーン](https://garoon.cybozu.co.jp/function/detail/cabinet/)のドキュメントシステムなど、様々なナレッジベースに触れてきました。
@@ -55,8 +50,6 @@
 
 そんな不可能なことに、神経をすり減らして、時間を浪費することは苦痛です。
 人間の脳を補完してくれる何かが必要なのです。
-
-
 
 ### 1. コードは書くより、読まれることの方が多い
 
@@ -139,3 +132,5 @@ Linter, Tester, Formatterの必要性と同じ。
 - [[資格勉強]]
 - [[アナリストへの道]]
 - [[考えていること]]
+
+<% tp.user.my_script("Hello World!") %>
