--- a/情報工学基礎/認証と認可.md
+++ b/情報工学基礎/認証と認可.md
@@ -77,3 +77,12 @@
 - 脆弱性のある他サイト等で同様のパスワードパターンを持っている
 - 偽装メッセージによるパスワード奪取
 - セッションハイジャック
+
+
+
+実は今AWS含めドキュメント化を進めておりまして、
+ナレッジベースを整備しています。
+体系的にしっかり勉強会するのであれば、ドキュメント整理も必須かと思ってます。
+
+共同製作者も募集中です（ちらっ
+https://publish.obsidian.md/panicyusuke/AWS/AWS
