--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -1,20 +1,16 @@
 [ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)ようこそ！
 
-**〜ポエム90%、ちょっと役立つ情報10%のナレッジベース〜**
-
-# ぼくはだれ？
-
-実務3年目のWebエンジニア（サーバーサイド）です。GCPでWebアプリを作っていました。
+ぼくは実務3年目のWebエンジニア（サーバーサイド）です。GCPでWebアプリを作っていました。
 一番辛かったアプリケーションは25個のKPIを評価するBIツールです。
-[HighCharts](https://www.highcharts.com/)というグラフを綺麗に描画できるJavaScriptのライブラリと、[Flask](https://flask.palletsprojects.com/en/2.0.x/) といPythonのWebサーバー用のライブラリを使ってGCPで分析ツールを作ってました。
 
 得意言語は`Python`です。
 [[TypeScript]]も少し。
+その他に僕ができることは、[[技術]] を見てください。
 
 基本的にはすべてのパイソニアに捧ぐパイソニアのためのナレッジベースになると思います。（GCPもAWSも基本はすべてPythonで書きます。）
 
 これまで、起きている間はずっと仕事、という絵に書いたようなブラックIT企業を渡り歩いてました。
-自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら転職活動を始めたところ、今の会社が拾ってくれました。（感謝しかない）
+自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら転職活動を始めたところ、今の会社が拾ってくれました。（感謝しかない。）
 
 おかげで、可処分時間が増えたので、これまで課題だなあ、と思っていたドキュメント化を進めたり、技術や理論について考える余裕が生まれました。
 
@@ -64,7 +60,7 @@
 従来のファイル（ディレクトリ）構造との違いは、
 
 参考: [MOCというものはどうやって作ったらいいのか](https://knowledgestuck.substack.com/p/moc)
-
+a
 ### 3. 疎結合
 
 テーマや内容が重複していたり、微妙に同じであるドキュメントの集合は美しくない。
@@ -124,7 +120,6 @@ Linter, Tester, Formatterの必要性と同じ。
 
 [@panicyusuke](https://twitter.com/panicyusuke)
 
-
 ## LINK
 
 - [[趣味]]
@@ -132,5 +127,5 @@ Linter, Tester, Formatterの必要性と同じ。
 - [[資格勉強]]
 - [[アナリストへの道]]
 - [[考えていること]]
+- [[経験]]
 
-<% tp.date.now() %>
