--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -1,16 +1,20 @@
 [ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)ようこそ！
 
-ぼくは実務3年目のWebエンジニア（サーバーサイド）です。GCPでWebアプリを作っていました。
-一番辛かったアプリケーションは25個のKPIを評価するBIツールです。
+ぼくのあたまのなかは、【ぼくのかんがえたさいきょうのナレッジベース】です！
+あらゆる物事のつながりをネットワークで可視化して、世界の構造を明らかにするぞおお。
 
-得意言語は`Python`です。
+## ぼくは誰で、何をしているのか
+
+実務3年目のWebエンジニア（サーバーサイド）です。
+GCPでWebアプリを作っていました。
+一番辛かったアプリケーションは25個のKPIを評価するBIツール。
+
+得意言語は[[Python]]。
 [[TypeScript]]も少し。
-その他に僕ができることは、[[技術]] を見てください。
+その他に僕ができることは、[[技術]] を見てもらったら大体解ると思います。
 
-基本的にはすべてのパイソニアに捧ぐパイソニアのためのナレッジベースになると思います。（GCPもAWSも基本はすべてPythonで書きます。）
-
-これまで、起きている間はずっと仕事、という絵に書いたようなブラックIT企業を渡り歩いてました。
-自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら転職活動を始めたところ、今の会社が拾ってくれました。（感謝しかない。）
+起きている間はずっと仕事、コーディングという絵に書いたようなブラックIT企業を渡り歩いてました。
+自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら転職活動を始めたところ、今の会社が拾ってくれました。（感謝感謝）
 
 おかげで、可処分時間が増えたので、これまで課題だなあ、と思っていたドキュメント化を進めたり、技術や理論について考える余裕が生まれました。
 
@@ -18,106 +22,37 @@
 モチベーションも維持しながら、伝わる文章の書き方について研究するのもいいなあと思い[ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)を始めました。
 
 主に[[技術]] や[[趣味]]、あと僕の話を少し発信したり、アナリスト見習いなので、
-統計についての知見もまとめていこうと思います。
+統計や機械学習についての知見もまとめていこうと思います。
 
-## 方針
+また、このページにPCでアクセスしてくださった方には右上にネットワークグラフがあることに気付いたでしょう。このサイトは、Obsidianという最強のツールで作成されました。
+一応、最強のナレッジベースを作ろうと計画しています。
+詳しく知りたい方はこちら。👉 [[ぼくはなぜナレッジベースを作ろうと思ったか。]]
 
-ただ闇雲にサイトを作っていっても面白くないので『ぼくの考えた最強のナレッジベース』を模索していこうと考えています。
+お仕事の依頼は本職に集中したいため、基本的には受け付けていませんが、
+オープンソースの開発はいくらでもウェルカムです。
+コンタクトはTwitterからお願いします。
 
-ナレッジベースとはもともと、「業務に関する知見」を一箇所にまとめたデータベースのことのようですが、
-ここでは「僕のこれまでの人生において見出したすべての事に関する知見」を一箇所にまとめてデータベースとしたいと考えています。
+あ、あと駆け出しエンジニアを応援しています。
+ぼくも昔はエンジニアリングでたくさん辛いことを経験したので、
+ぼくの失敗を共有することでだれかの助けになれば良いなと思っています。
 
-僕はもともとナレッジベースに強い関心がありました。
-これまで[Evernote](https://evernote.com/intl/jp)や[Notion](https://www.notion.so/product?fredir=1)、[Scrapbox](https://scrapbox.io/product)、[Growi(Wiki)](https://growi.cloud/)、あと[ガルーン](https://garoon.cybozu.co.jp/function/detail/cabinet/)のドキュメントシステムなど、様々なナレッジベースに触れてきました。
-
-しかし、どのナレッジベースも、「あれどこに置いたっけな」とか、「あのドキュメントはどこに書いたっけな」のように参照性が低く、秩序や統制がないため、カオスになっている現場を何度も見てきました。
-ナレッジベースの管理はとても難しいものです。比較的大規模なプロダクトのプログラムを書くのにとてもよく似ています。
-
-ドキュメントは組織やプロダクトにとって**いのち**だと思います。
-なぜなら、
-
-どれも大人数でドキュメントを作成するため、属人性が高く、無秩序になりやすいことも原因の一つだと思います。
-
-そこから、ナレッジベースには統制、ルール、方針が不可欠だと思うようになりました。
-そのルールによってドキュメント群・ドキュメントを構造化することができれば、きっとぼくのあたまのなかの混沌は消え去ることでしょう。
-
-もともと人間の脳に、自分のすべてのスキルや知識を蓄えて、必要なときに取り出す能力はありません。
-人間というのはバグだらけのシステムで、仕組みや運用でカバーしないととても。
-
-そんな不可能なことに、神経をすり減らして、時間を浪費することは苦痛です。
-人間の脳を補完してくれる何かが必要なのです。
-
-### 1. コードは書くより、読まれることの方が多い
-
-参照性が高く、構造化できている構成を目指す。
-あとで整備しようと、思ってドキュメントを作らない。
-
-### 2. MOC
-
-`Map of Contents`のこと。
-単一テーマドキュメント（子ドキュメント）の格納先を示す親ドキュメントでドキュメント群を構成しようとする考え方。
-
-従来のファイル（ディレクトリ）構造との違いは、
-
-参考: [MOCというものはどうやって作ったらいいのか](https://knowledgestuck.substack.com/p/moc)
-a
-### 3. 疎結合
-
-テーマや内容が重複していたり、微妙に同じであるドキュメントの集合は美しくない。
-可能な限り、もれなくダブりなく記述するように努める。
-
-ドキュメントを書くときは、論点が発散してしまうことがあるが、努めて収束させるようにテーマを絞り疎結合なドキュメント群を作成することを目指したい。
-
-⚠ 疎結合と似たようなことばに[DRY原則](https://ja.wikipedia.org/wiki/Don%27t_repeat_yourself)や、[OAOO原則](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?OAOO%28Once%20And%20Only%20Once%29)があるが、本質的にはいずれも同様のことを説明しているに過ぎないため、比較的理解しやすいと思われる疎結合をということばを選んだ。
-
-### 3. センスの良い命名をする
-
-センスということばを用いて説明することは避けるべきである。
-なぜなら、センス良くしてください、などと言ったものは個体値によって異なり、再現性がないからである。
-（書き手にとって）センスがいいだけで、
-しかし、ここでは
-
-### 4. 議論には一次ソースをベースにする
-
-`Qiita`や`Zen`の記事は基本的には引用しない。
-二次ソース以降はかならず書き手のバイアスが含まれ、別の解釈となって編集されている。
-基本的には信用してはならない。（論文と同じ）
-
-### 5. 人間がすべきでないことは積極的に機械に任せる
-
-Linter, Tester, Formatterの必要性と同じ。
-人間の1日の生産量は限られている。
-エネルギーを誤字をなくしたり、
-
-## このWebページはなに？
-
-このWebサイトは [Obsidian](https://obsidian.md/) によって作成されています。
-[Obsidian](https://obsidian.md/) とはなんなのか...
-
-### A second brain,  for you, forever.
-
-第二の脳として使えることを触れ込みにしているMarkdownベースのナレッジベースです。
-僕はこのObsidianにとても期待しています。
-
-ドキュメント群を階層構造だけでなく、ネットワークとして表現できます。
-次のような利点があります。
-
-- Wikipediaのようなページ間リンクのが使える
-- 構造化を意識しながらドキュメントを作成できる
-- ネットワーク構造を利用しているので
-
-触り始めて約三ヶ月になりますが、書き心地もよく、[Evernote](https://evernote.com/intl/jp)や[Notion](https://www.notion.so/product?fredir=1)と比べて
+ペアプログラミングでもコードレビューでも設計の議論でも、僕にできることであればなんでも協力します。
+対価は僕のTwitterの記事にいいねをつける、でどうでしょうか。
 
 ## 外部サービス
 
 ### Qiita:
+
 [panicyusuke](https://qiita.com/panicyusuke) (ほとんど書いてません...、Obsidianで良さげな記事がかけたらそっちにも転記します。)
 
 ### GitHub:
-[Harapecopecopeco](https://github.com/Harapecopecopeco/Obsidian) (半分以上プライベートなので秘匿情報逃したあとPublicに移動します...)
+
+[Harapecopecopeco](https://github.com/Harapecopecopeco/Obsidian) 
+半分以上プライベートなので秘匿情報逃したあとPublicに移動します...気が向いたら。
 
 ### Twitter:
 
+フォローバック100%、インフルエンサー目指してます。
 [@panicyusuke](https://twitter.com/panicyusuke)
 
 ## LINK
@@ -127,5 +62,5 @@ Linter, Tester, Formatterの必要性と同じ。
 - [[資格勉強]]
 - [[アナリストへの道]]
 - [[考えていること]]
-- [[経験]]
+- [[失敗談]]
 
