:+1:Create default api server

--- a/Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md
+++ b/Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md
@@ -1,3 +1,5 @@
+（工事中）
+
 理由は２つあります。
 
 『同じことを何度も繰り返している自分に、嫌気が差したこと』と、
@@ -40,11 +42,33 @@
 
 ## 自分の言語化能力の低さに絶望した
 
-自分の経験や、理解を他人に伝えるのはとても難しいことです。
-聞き手の経験や事前知識によっても伝わり方は違ってくるし、自分の話し方ひとつですら相手の理解度に大きな影響を与えます。
-相手に理解してもらいたいからたとえ話を入れたり、
+ぼくは伝え方が原因で、多くの失敗を経験しました。
 
-『言語化できていないと理解したこととは言えない。』
+- 言語化が曖昧なまま、アプリケーションを実装して
+
+ぼくは、
+『言語化できないことは理解しているとは言えない。』
+という価値観を持っています。
+
+そして、誰かに何かを伝えるためには、いくつかポイントがあるとも思っています。
+
+- 伝えたいことを明確にする（ゴールを決めておく）
+- できるだけ内容にまとまりを持たせて順序立てて話す（起承転結、結論、理由、具体例など）
+- 伝え手と聞き手の目線を合わせる
+- 略語や専門用語をできるだけ使わないか、使ったとしても説明する
+
+
+
+それと同時に、人とコミュニケーションをする上で、曖昧な伝え方はしたくないし、100%言語化して伝えたいとも思っています。
+その理由は、
+伝え方が原因で、多くの人を傷つけてしまったことや、正しく理解されないと思った経験が多いからです。
+
+自分の経験や、理解を他人に伝えるのはとても難しいことです。
+
+
+人に何かを伝えるということは、
+対人コミュニケーションをしている我々にとって簡単なことであると錯覚しがちですが、
+
 
 ## 方針
 
