--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -6,8 +6,8 @@
 ## ぼくは誰で、何をしているのか
 
 実務3年目のWebエンジニア（サーバーサイド）です。
-GCPでWebアプリを作っていました。
-一番辛かったアプリケーションは25個のKPIを評価するBIツール。
+大学では自然言語処理を研究していました。
+前職ではGCPでWebアプリを作っていました。
 
 得意言語は[[Python]]。
 [[TypeScript]]も少し。
@@ -19,14 +19,26 @@ GCPでWebアプリを作っていました。
 おかげで、可処分時間が増えたので、これまで課題だなあ、と思っていたドキュメント化を進めたり、技術や理論について考える余裕が生まれました。
 
 まっ、どうせならやるならブログ兼技術サイトみたいなのを運営して、
-モチベーションも維持しながら、伝わる文章の書き方について研究するのもいいなあと思い[ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)を始めました。
+誰かに見られているという状況の中でモチベーションも維持しながら、
+伝わる文章の書き方について研究するのもいいなあと思い[ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)を始めました。
 
 主に[[技術]] や[[趣味]]、あと僕の話を少し発信したり、アナリスト見習いなので、
 統計や機械学習についての知見もまとめていこうと思います。
 
-また、このページにPCでアクセスしてくださった方には右上にネットワークグラフがあることに気付いたでしょう。このサイトは、Obsidianという最強のツールで作成されました。
-一応、最強のナレッジベースを作ろうと計画しています。
+## このサイト is 何
+
+このページにPCでアクセスしてくださった方には右上にネットワークグラフがあることに気付いたでしょう。
+このサイトは、Obsidianという最強のツールで作成されました。
+
+こんな感じで、
+ドキュメント間の関係が可視化されているので、文書の整理と、参照性が向上します。
+
+![[Screenshot from 2021-11-07 02-37-44.png]]
+
+ぼくは最強のナレッジベースに興味関心が高いので『ぼくの考えた最強のナレッジベース』を作ろうと計画しています。
 詳しく知りたい方はこちら。👉 [[ぼくはなぜナレッジベースを作ろうと思ったか。]]
+
+## お仕事の依頼はNGです
 
 お仕事の依頼は本職に集中したいため、基本的には受け付けていませんが、
 オープンソースの開発はいくらでもウェルカムです。
@@ -36,7 +48,8 @@ GCPでWebアプリを作っていました。
 ぼくも昔はエンジニアリングでたくさん辛いことを経験したので、
 ぼくの失敗を共有することでだれかの助けになれば良いなと思っています。
 
-ペアプログラミングでもコードレビューでも設計の議論でも、僕にできることであればなんでも協力します。
+ペアプログラミングでもコードレビューでも設計の議論でも、
+僕にできることであればなんでも協力します。
 対価は僕のTwitterの記事にいいねをつける、でどうでしょうか。
 
 ## 外部サービス
