:+1:Clone secret repository

--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -9,12 +9,12 @@
 大学では自然言語処理を研究していました。
 前職ではGCPでWebアプリを作っていました。
 
-得意言語は[[Python]]。
-[[TypeScript]]も少し。
+得意言語は`Python`。
+`TypeScript`, `React` も少し。
 その他に僕ができることは、[[技術]] を見てもらったら大体解ると思います。
 
 起きている間はずっと仕事、コーディングという絵に書いたようなブラックIT企業を渡り歩いてました。
-自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら転職活動を始めたところ、今の会社が拾ってくれました。（感謝感謝）
+自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら紙切れ同然のSOを燃やして転職活動を始めたところ、今の会社が拾ってくれました。（感謝感謝）
 
 おかげで、可処分時間が増えたので、これまで課題だなあ、と思っていたドキュメント化を進めたり、技術や理論について考える余裕が生まれました。
 
@@ -33,7 +33,7 @@
 こんな感じで、
 ドキュメント間の関係が可視化されているので、文書の整理と、参照性が向上します。
 
-![[Screenshot from 2021-11-07 02-37-44.png]]
+![[top_graph.png.png]]
 
 ぼくは最強のナレッジベースに興味関心が高いので『ぼくの考えた最強のナレッジベース』を作ろうと計画しています。
 詳しく知りたい方はこちら。👉 [[ぼくはなぜナレッジベースを作ろうと思ったか。]]
