--- a/Me/技術.md
+++ b/Me/技術.md
@@ -1,4 +1,7 @@
 僕が扱える技術一覧は次の通りです。
+空のドキュメントのところは、シンプルにドキュメント化を進められていないところです。
+
+（言い訳: Obsidian自体も、2021年9月に始めたのでドキュメント化がほとんど終わっていません... m(__)m ）
 
 これまで自分が投じてきた時間に比例して、ドキュメント群の量や質が変わります。
 あと投じてきた時間が多くてもドキュメント化が間に合ってなくてタイトルだけになってるところも多々あります。ごめんね。
