--- a/Python/標準機能/並列処理.md
+++ b/Python/標準機能/並列処理.md
@@ -1,7 +1,5 @@
 #Python
 
-# 並列処理
-
 ## Q1. 並列処理ってなに？
 
 複数のプロセスを実行するための仕組み。
@@ -16,4 +14,4 @@
 
 `Prediction` で多数の会員の属性を求めるときにMySQLを用いたが、その時ディスクIOで多くの時間を要してしまいデータ作成に時間がかかってしまっていた。
 `MySQL`は`Pool`という機能があり、複数のクライアントからのリクエストを同時に受付けることができるが、単一クライアントからアクセスしていていた場合その恩恵を受けることは出来ない。
-改善策として、クライアントを複数立ち上げることと、
+改善策として、クライアントを複数立ち上げることと、、、
