:+1:Add top image.png

--- a/Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md
+++ b/Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md
@@ -102,15 +102,16 @@
 参照性が高く、構造化できている構成を目指す。
 あとで整備しようと、思ってドキュメントを作らない。
 
+文書というものは読まれることが前提だ。
+なぜ、書き手の気持ちよさを優先せねばならないのだろう？
+
 ### 2. MOC
 
 `Map of Contents`のこと。
 単一テーマドキュメント（子ドキュメント）の格納先を示す親ドキュメントでドキュメント群を構成しようとする考え方。
 
-従来のファイル（ディレクトリ）構造との違いは、
-
 参考: [MOCというものはどうやって作ったらいいのか](https://knowledgestuck.substack.com/p/moc)
-a
+
 ### 3. 疎結合
 
 テーマや内容が重複していたり、微妙に同じであるドキュメントの集合は美しくない。
@@ -120,12 +121,18 @@ a
 
 ⚠ 疎結合と似たようなことばに[DRY原則](https://ja.wikipedia.org/wiki/Don%27t_repeat_yourself)や、[OAOO原則](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?OAOO%28Once%20And%20Only%20Once%29)があるが、本質的にはいずれも同様のことを説明しているに過ぎないため、比較的理解しやすいと思われる疎結合をということばを選んだ。
 
-### 3. センスの良い命名をする
+### 3. センスという言葉を使わない
 
-センスということばを用いて説明することは避けるべきである。
-なぜなら、センス良くしてください、などと言ったものは個体値によって異なり、再現性がないからである。
-（書き手にとって）センスがいいだけで、
-しかし、ここでは
+誰にでも伝わる言い方をしよう。
+
+センスということばを用いて説明することは避けるべきだ。
+なぜなら、センス良くしてください、などと言ったものは個体値によって異なり、
+再現性がないからである。
+
+センスという言葉を使って説明することをサボったり、思考停止しないようにしよう。
+
+そして、センスという言葉を使って批判してくる人は、そもそも対話する気がないので避けるようにしよう。（多分機嫌がわるいのさ。）
+
 
 ### 4. 議論には一次ソースをベースにする
 
@@ -133,11 +140,19 @@ a
 二次ソース以降はかならず書き手のバイアスが含まれ、別の解釈となって編集されている。
 基本的には信用してはならない。（論文と同じ）
 
+情報というものは、人を介した回数だけ劣化する。
+公式ドキュメントを書くひとはプロだ。
+一次ソースを使って新たに記事を焼き直すひとはその道のプロだろうか？
+
+繰り返す、情報というものは、人を介した回数だけ劣化する。
+
 ### 5. 人間がすべきでないことは積極的に機械に任せる
 
-Linter, Tester, Formatterの必要性と同じ。
+`Linter`, `Tester`, `Formatter` の必要性と同じ。
 人間の1日の生産量は限られている。
-エネルギーを誤字をなくしたり、
+限られたエネルギーを誤字をなくしたり、エラー探しに向けるのは大きなハンディキャップとなる。
+積極的に機械の力に頼ろう、仕組み化しよう。
+機械は言われたとおりに動くし、言われていないことはしない。
 
 ## このWebページはなに？
 
