--- a/情報工学基礎/情報工学基礎.md
+++ b/情報工学基礎/情報工学基礎.md
@@ -3,14 +3,18 @@
 # アルゴリズム
 
 - [[SHA]]
+- [[BASE64]]
 
-## 暗号理論
+# 暗号理論
 
 - [[認証と認可]]
 
-## Block Chain
+# Block Chain
 
 - [[BitCoin]]
 - [[Block Chain]]
 - [[NFT]]
 
+## 仮想化技術
+
+- [[仮想化技術]]
