--- a/情報工学基礎/認証と認可.md
+++ b/情報工学基礎/認証と認可.md
@@ -1,8 +1,6 @@
-#情報工学 
+#情報工学 #TBD 
 
-## 認証と認可について
-
-### 「認証」とは...
+# 「認証」とは...
 
 アプリケーションにおける「認証」は、ユーザーのIDとパスワード等（メールアドレスや生体情報などの本人を特定できる情報）を比較し「アプリケーションに許可された正規ユーザーであることを確かめる」行為である。
 
@@ -11,20 +9,20 @@
 
 つまり、「認証」とは、ユーザーが「誰」か、ということ「のみ」を担保したものである。
 
-### 「認可」とは...
+# 「認可」とは...
 
 アプリケーションにおける「認可」は、「とある特定の条件に対して、リソースアクセスの権限を与える」行為である。
 データベースの「参照」は可能でも、「変更・削除」は不可である、のように設定する。
 
  つまり、「誰が」ではなく「何を許可されているか」という要素が重要である。
 
-### 認証と認可は密結合である
+# 認証と認可は密結合である
 
 認証と認可を切り離して説明したが、実際はWebアプリケーションにおいて認証が終われば速やかに認可が行われることの方が圧倒的多数（ログイン後にそのユーザーごとに出来ることが違うのは当然、AはBのデータに参照出来てしまってはプライバシーの問題などが発生するだろう）であり、現代社会においては認証と認可はセットで考えることが多い。
 そのため、
 
 
-## 一般的な認証のシナリオ
+# 一般的な認証のシナリオ
 
 一般に、認証機能を実装しようと思った場合は、次の3パターン。
 1. 従来型（HTMLベース）のWebアプリ
@@ -41,7 +39,7 @@
 	- クライアントサイド（アプリ）はライブラリをいれるだけ
 	- サーバー管理をしなくていい
 
-## 認証を支える技術・プロトコル（規約）
+# 認証を支える技術・プロトコル（規約）
 
 - OAuth 2.0
 - OpenID Connect
@@ -49,7 +47,7 @@
 - SAML 2.0
 
 
-## 認証における関心事
+# 認証における関心事
 
 - 強固な認証
 	- パスワードポリシー
@@ -64,15 +62,15 @@
 	- ユーザーデータの管理
 	- 変更に耐えうる設計
 
-## 認証における脆弱性
+# 認証における脆弱性
 
-### サービス提供者側
+# サービス提供者側
 
 - ずさんな認証キー管理
 - 辞書攻撃や総当り攻撃を用いたパスワード盗用
 - 過剰なアクセス権限の付与
 
-### サービス利用者側
+# サービス利用者側
 
 - 脆弱性のある他サイト等で同様のパスワードパターンを持っている
 - 偽装メッセージによるパスワード奪取
