:+1:Add top image.png

--- a/Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md
+++ b/Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md
@@ -2,7 +2,7 @@
 
 『同じことを何度も繰り返している自分に、嫌気が差したこと』
 と、
-『自分の言語化能力の低さに絶望したから』です。
+『言語化能力の低さに絶望したから』です。
 
 ## 同じことを繰り返している自分に、嫌気が差した
 
@@ -42,7 +42,7 @@
 人間は知的活動を行うことのみに集中して、
 ドキュメントの管理や繋がりを明らかにすることは別の仕組みに委譲しましょう。外部脳、第二の脳Obsidianに頼りましょう。
 
-## 自分の言語化能力の低さに絶望した
+## 言語化能力の低さに絶望した
 
 ぼくは伝え方が原因で、多くの失敗を経験しました。
 
@@ -78,9 +78,31 @@
 
 # なぜナレッジベースを作ろうと思ったか。
 
-(T.B.D.)
+ここまでぐだぐだ述べてましたが、
+言語化能力を向上させるためには、
+ドキュメントをたくさんかいて、
+本をたくさん読むことしか無いと思います。
 
-## なぜObsidainを選んだか。
+そして書き続けるにはぼく自信が納得する動機づけ、理由が必要だとも思います。
+そこでナレッジベースを公開して、人に見られている意識付けを強めながら、
+怠惰なぼくでもナレッジベースを作り続ける動機を無理やり作るために公開に至りました。
+
+ナレッジベース整備にはどんなメリットがあるのか知りたい方は
+👉 [[ナレッジベースの副次的効果]]
+
+# 思想と仕組み
+
+ ナレッジベースを運用、保守するには一貫性のある思想と秩序が必要です。
+ ナレッジベースをカオスにしないために、いくつかの思想と、仕組みを考えました。
+
+- 精神的な方針を定めました。
+👉 [[思想]] 
+- ドキュメントを書き進める上での構造的なルールを定めました。
+👉 [[仕組み]] 
+- ナレッジベースを作る上での失敗を整理しました。
+👉 [[ナレッジベースが継続しない理由]]
+
+# なぜObsidainを選んだか。
 
 これまで[Evernote](https://evernote.com/intl/jp)や[Notion](https://www.notion.so/product?fredir=1)、[Scrapbox](https://scrapbox.io/product)、[Growi(Wiki)](https://growi.cloud/)、あと[ガルーン](https://garoon.cybozu.co.jp/function/detail/cabinet/)のドキュメントシステムなど、様々なナレッジベースに触れてきました。
 
@@ -105,22 +127,9 @@
 
 そこでぼくが発見したのが、このネットワークグラフ可視化によるナレッジベース、Obsidianです。
 
-## ナレッジベースを作るにあたってのルール・方針
-
- ナレッジベースを運用、保守するには一貫性のある思想と秩序が必要です。
- ナレッジベースをカオスにしないために、いくつかの思想と、仕組みを考えました。
-
-- 精神的な方針を定めました。
-👉 [[思想]] 
-- ドキュメントを書き進める上での構造的なルールを定めました。
-👉 [[仕組み]] 
-
-## このWebページはなに？
-
-このWebサイトは [Obsidian](https://obsidian.md/) によって作成されています。
 [Obsidian](https://obsidian.md/) とはなんなのか...
 
-### A second brain,  for you, forever.
+# A second brain,  for you, forever.
 
 第二の脳として使えることを触れ込みにしているMarkdownベースのナレッジベースです。
 僕はこのObsidianにとても期待しています。
