--- a/Me/技術.md
+++ b/Me/技術.md
@@ -15,6 +15,7 @@
 | [[Docker]]       | 🥈         |
 | [[JavaScript]]   | 🥈         |
 | [[Linux]]        | 🥇         |
-| [[Web技術]]       | 🥈         |
-| [[情報工学基礎]]   | 🥇         |
-| [[設計]]          |    🥉      |
+| [[Web技術]]      | 🥈         |
+| [[情報工学基礎]] | 🥇         |
+| [[設計]]         | 🥉         |
+| [[ツール]]         | 🥉       |
