--- a/Me/経験/スタートアップアンチパターン.md
+++ b/Me/経験/スタートアップアンチパターン.md
@@ -8,11 +8,9 @@
 
 これから述べる内容は決して誰かを批判したり、悪口を言っているわけではないので注意されたい。
 半分くらいの意思決定は僕が下したものと言って過言ではないし、
-自分への戒めとして明文化しておこう、くらいの気持ちで書いてあるので、
-誰かを批判するものではない。
+自分への戒めとして明文化しておこう、くらいの気持ちで書いてあるだけだ。
 
-ぼくを雇っている、雇おうとするひとが、
-ぼくがこれくらい無謀で馬鹿であることを認識してもらえたらWin-Winかと。
+ぼくがこれくらい無謀で馬鹿であることを認識してもらえたら良いかなと。
 それでもいいよ、って思ってくれる人だけぼくと付き合ってください。
 
 1. [[互いの価値観を理解できなければ、必ず衝突を起こす]]
@@ -48,4 +46,14 @@
 28. 税理士、社労士？？内製化っしょ！！！
 29. 顧客はきっと〇〇を求めているから■■すれば良いよね！！
 30. ごめん、給料払えないから三ヶ月待ってもらえる？
+31. 業務終了後(2100)に飲み会兼反省会を一ヶ月続けると全員病む
+32. 几帳面なヤツの机の上がカオスになるときは黄色信号
+33. 納期が一番最初に決まっているアジャイル
+34. 社長専用のYESマンがいる
+35. PMとエンジニアが兼任は須らく炎上案件
+36. とりあえず手を動かせば事業は進むという勘違い
+37. 土曜日の19時から週次の反省会はやられる
+
+
+
 
