--- a/Me/経験/失敗リスト/互いの価値観を理解できなければ、必ず衝突を起こす.md
+++ b/Me/経験/失敗リスト/互いの価値観を理解できなければ、必ず衝突を起こす.md
@@ -1,34 +1,58 @@
 #失敗リスト
 
 複数で仕事をする以上、他者の価値観、進め方に極端に踏み入ってはいけない。
-特に、自分と違う動きをする人を排除するような事をしてはいけない。
+特に、自分と違う考え方、動きをする人を排除するような事をしてはいけない。
 
-『雑魚が！』とか、『意識低すぎ！』とか言うふうに批判してもダメ出し、思ってもダメ。
-自分たちと一緒に仕事をしていることに感謝しないといけない。
-特に、言い方は本当に重要。
+# これまでのぼくたち
+
+今考えると信じられないが、
+『雑魚が！』とか、『意識低すぎ！』とか言うふうに批判したりする環境だった。
+言うことこそ少なかったが、常々思っていたと思う。
+
+スクラップアンドビルドが自分を強くした理由だ、
+厳しい環境と高ストレスな環境に身を置くことだけが
+人間が強くなるための方法だ、という思想を持っていた。
+
+そういう思想も自分を鼓舞するのにもつのは良いかもしれないが、
+それを他者に強要してはいけない。
+
+ストレス耐性高い俺、かっこいいと思いがちだった。
+
+一番大事なことは、
+『仕事は一人でするものじゃない』ということ。
+
+多様性を受け入れ、
+個々の能力、バリューを理解した上で適時適切なポジション、役割を持たせた方が組織はよく回る。
+
+そして何よりも、自分たちと一緒に仕事をしてくれていることに感謝しないといけない。
+
+# 伝え方
+
+言い方は本当に重要。
 伝え方が９割、みたいな本があったと思うけど、賢い人ほど言い方には気を遣っている。
 
 他の人のスタンスを許容できない組織は、短期的な戦略を立てることができても、
-長期的には生き残れない。
-そんな会社で働きたくない。
+長期的には生き残れない。そんな会社で働きたくない、と思われたらお終い。
 
-それなら同じ価値観を共有している人だけで組織を作れば良いじゃないの？と思うかもしれないが、そんなことは到底叶わない。
+こういう話をすると、
+それなら同じ価値観を共有している人だけで組織を作れば良いじゃないの？
+と思う人が出るかもしれない。
 
-理由は次の通り。
+しかしそんなものは夢物語だ。
 
-- 類似した人間を見つけることは難しい
-	- 価値観は経験や環境から醸成されることが多い
+# 自分と似た人間だけ集めてチーム作ろうぜ！が成功しない理由
+
+1. 類似した人間を見つけることは難しい
+	- 価値観は経験や環境から醸成されることが多い。
 	- 自分と同じ背景をもつ人が見つかる可能性は極めて小さい。
-- 人のスタンスは簡単に表出しないので、見えているスタンスが真のスタンスとは限らない
-	- Aさんのスタンスはきっと〇〇だろう、と面接や振る舞いで見極めるのは不可能
-	- その人の発言や経歴、スキルで人格を判断すること
-- 人は平時と有事で性格が変わる生き物である
+2. 人のスタンスは簡単に表出しないので、見えているスタンスが真のスタンスとは限らない
+	- Aさんのスタンスはきっと〇〇だろう、と面接や振る舞いで見極めるのは不可能。
+	- その人の発言や経歴、スキルで人格を判断すること。
+3. 人は平時と有事で性格が変わる生き物である
 	- 「ぼく会社のことしっかり考えてます！」口では簡単に言える。
 	- 発言時期によってその気持ちが変わることは幾らでもある。
 	- だったら行動でみろ、とよく言うが、行動もさほど難しいことではない。
 	- 少なくともぼくは、行動上、貢献したいと思わせることは出来る。
-- 人それぞれタスクによってストレス量、負担量は違う
+4. 人それぞれタスクによってストレス量、負担量は違う
 	- カスタマーサクセス、法務、プログラマーなどの職種によってタスク・負担料は違うことを認めよう。
 	- 会社のストレス量、仕事量をチェックする人が比較的仕事量の少ない人であった場合、会社のノルマや締切は、比較的楽な人に合わせられるため、苦しい人たちにしわ寄せが来て辞めてしまう。
-
-とまあ、
