--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -1,54 +1,94 @@
-#TBD 
+#TBD #Me 
 
 [ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)ようこそ！
 
 ぼくのあたまのなかは、【ぼくのかんがえたさいきょうのナレッジベース】です！
+
 あらゆる物事のつながりをネットワークで可視化して、
 世界の構造を明らかにするぞおお、と思って作りました。
 
-# ぼくは誰で、何をしているのか
+# ぼくは誰か
 
 実務3年目のWebエンジニア（サーバーサイド）です。
 大学では自然言語処理を研究していました。
-前職ではGCPでWebアプリを作っていました。
-
+前職ではGCPでWebアプリや機械学習エンジンを作っていました。
+現職では、新米アナリスト（データ分析をする人）として下積みをしています。
 得意言語は`Python`。
-`TypeScript`, `React` も少し。
-その他に僕ができることは、[[技術]] を見てもらったら大体解ると思います。
 
-起きている間はずっと
-仕事、コーディング、毎日エラー対応
-に追われるという絵に書いたようなブラックIT企業を渡り歩いてました。
-自分の時間を作りたいなあ、大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、と思いながら紙切れ同然のSOを燃やして転職活動を始めたところ、今の会社が拾ってくれました。（感謝感謝）
+# してきたこと
 
-おかげで、可処分時間が増えたので、これまで課題だなあ、
-と思っていたドキュメント化を進めたり、
-技術や理論について考える余裕が生まれました。
+これまでは、起きている間はずっと
+コーディング、エラー対応、マネジメント、スケジュール管理
+と、なかなな大変な環境でした。
+今でこそ思いますが、
+PM業務兼プログラマーは未熟な僕にとっては中々にハードなものでした。
 
-まっ、どうせならやるならブログ兼技術サイトみたいなのを運営して、
-誰かに見られているという状況の中でモチベーションも維持しながら、
-伝わる文章の書き方について研究するのもいいなあ、
-と思い[ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)を始めました。
+自分の時間を作りたいなあ、
+大学生の頃みたいに落ち着いて思考を深める時間が欲しいなあ、
+と思いながら紙切れ同然のSOを燃やして転職活動を始めたところ、
+今の会社が拾ってくれました。（感謝感謝）
 
-主に[[技術]] や[[趣味]]、あとぼくの[[考えていること]] を少し発信したり、
-アナリスト見習いでもあるので統計や機械学習についての知見もまとめていこうと思います。
+# 『ぼくのあたまのなか』でしたいこと
 
-# このサイト is 何
+入社二ヶ月目になりますが、今の職場はとても過ごしやすいです。
+会社運用に必要な基盤が十分に整備されており、仕組み化が行き届いています。
+方針や思想も非常に一貫しており、安定感があります。
+
+おかげで、可処分時間と精神的余力が増えたので、
+これまで課題であったドキュメント化（文書で考えをまとめて整理すること）
+を研究したり、技術や理論について考える余裕が生まれました。
+
+どうせならやるなら技術サイトみたいなのを運営して、
+誰かに見られているという状況に身をおいてモチベーションも維持しながら、
+『じぶんの考えを誰かに伝えること』
+と
+『自分の理解していることをしっかりと構造化する』
+ことについて研究するのもいいなあ、と思ったことが
+[ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)を始めようと思ったきっかけです。
+
+今の会社に就職できなかったら『ぼくのあたまのなか』は存在しなかったと思います。
+
+ここでは僕の学んできたこと（[[技術]]） や[[趣味]]、[[考えていること]]、
+作ってきたもの（[[Products 1]]） を発信したり、
+人生の[[失敗談]]や統計についての知見をまとめていこうと思います。
+
+一番力を入れたいところは、[[技術]] で、
+これまで学んできたエンジニアリングに必要な考え方、
+言語やフレームワークの性質、アルゴリズムやツール、
+仕組みについて噛み砕いて説明することを目標にしています。
+
+エンジニアリング初学者の方が、低コストで技術や仕組みついて理解する、プログラミングや設計に対しての精神的なハードルと学習コストを下げることができるようなナレッジベースになったらいいな、と思っています。
+
+もちろん、中級者以上の方も、「アレってどうするんだっけ、ああなるほど。」と
+Googleの検索エンジンで検索する必要なく
+「ぼくのあたまのなか」を見ただけで完結するようなナレッジベースになればそれは至極の喜びです。
+
+# このサイトは何か
 
 このサイトは『ぼくの考えた最強のナレッジベース』です。
 
-PCでアクセスした人は、右上にネットワークグラフがあることに気付いたと思います。
+PCから『ぼくのあたまのなか』に訪れた人は、
+右上にネットワークグラフがあることに気付いたと思います。
 
-「ぼくのあたまのなか」はObsidianというネットワークグラフによるナレッジ可視化ツールによって実装されています。
+「ぼくのあたまのなか」は[Obsidian](https://obsidian.md/)という
+ネットワークグラフによるナレッジベースです。
 
 ネットワークの可視化によって、ドキュメント群が俯瞰され、
-参照性が向上し、文書の整理と生成が加速します。
+参照性が向上し、文書の整理と構造化が加速します。
 
-こんな感じで、ドキュメントの関係が可視化されるので、なんとなくページを移動しても、それに関連するドキュメントへのアクセスが容易になっています。
+その代償に作成コストは跳ね上がりますが...👉 [[ぼくのあたまのなかが完成しない言い訳]]
+
+こんな感じで、ドキュメントの関係が可視化されるので、
+適当なドキュメントを開いて、グラフのポイントまたはリンクを辿っていくことで、
+関連するドキュメントを参照することが出来ます。
+
+別ファイルに移動するのに、階層を上がったり降りたりする必要なしに（普通のドキュメントツールはファイルが階層構造で表現されていることが多いと思います。）ドキュメント群を俯瞰できる素晴らしいツールです。
+ドキュメント移動のストレスが軽減された結果、『移動』そのものが負担ではなくなるため執筆、閲覧時間が延伸することが期待されます。
 
 ![[top_graph.png.png]]
 
-詳しく知りたい方はこちら。👉 [[ぼくはなぜナレッジベースを作ろうと思ったか。]]
+詳しく知りたい方はこちら。
+👉 [[ぼくはなぜナレッジベースを作ろうと思ったか。]]
 
 # お仕事の依頼はNGです
 
@@ -77,8 +117,9 @@ PCでアクセスした人は、右上にネットワークグラフがあるこ
 
 ## Twitter:
 
-フォローバック100%、インフルエンサー目指してます。
+フォローバック100%、ネタでインフルエンサー目指してます。
 [@panicyusuke](https://twitter.com/panicyusuke)
+このサイトがいいな、と思ったらピン止めしているツイートにいいねしてください ←
 
 # LINK
 
@@ -88,4 +129,3 @@ PCでアクセスした人は、右上にネットワークグラフがあるこ
 - [[アナリストへの道]]
 - [[考えていること]]
 - [[失敗談]]
-
