:+1:Add top image.png

--- a/ツール/アクセス解析ツール/アクセス解析ツール.md
+++ b/ツール/アクセス解析ツール/アクセス解析ツール.md
@@ -4,17 +4,24 @@ WebサービスやECサイトの売上向上には、
 ユーザーの傾向や、
 行動を分析するにはアプリケーションのアクセス解析が効果的です。
 
-ここでは、以下で述べる、標準的なアクセス解析ツールを用いて、
+ここでは、次の標準的なアクセス解析ツールを用いて、
 自社サービスのユーザーを分析するための手法、システム設計について説明します。
-
 
 # アクセス解析ツール
 
-- Googleの最新のアクセス解析ツール:[[Google Analytics 4]]
+- [[Google Analytics 4]]
+	- Google最新のアクセス解析ツール
+	- Googleアカウントと連携した匿名化によるプライバシー重視のデータ収集
+	- 予測オーディエンス（Google機械学習モデルを用いた予測が可能）
+	- デフォルトの指標は、Googleが選出した使用頻度の高いものとなった
+	- 直帰率という概念が消滅 ( 👉 [[なぜ直帰率がなくなったか]])
+	- Webページだけでなく、動画・アプリを含めた複合的な分析が可能
 - [[Google Analytics 360(UA)]]
+	- Google旧世代のアクセス解析ツール
+	- 分析者が分析軸を任意に設定するカスタムディメンションを採用
+	- 
 - [[Firebase Analytics]]
 -  `Adobe Analytics` 
-
 
 # アクセス解析の流れ
 
