:+1:Add top image.png

--- a/ツール/アクセス解析ツール/アクセス解析ツール.md
+++ b/ツール/アクセス解析ツール/アクセス解析ツール.md
@@ -7,7 +7,9 @@ WebサービスやECサイトの売上向上には、
 ここでは、次の標準的なアクセス解析ツールを用いて、
 自社サービスのユーザーを分析するための手法、システム設計について説明します。
 
-# アクセス解析ツール
+また、
+
+# アクセス解析ツールと特徴
 
 - [[Google Analytics 4]]
 	- Google最新のアクセス解析ツール
