--- a/開発方式/オブジェクト指向/多態性(ポリモーフィズム).md
+++ b/開発方式/オブジェクト指向/多態性(ポリモーフィズム).md
@@ -1,4 +1,21 @@
-ポリモーフィズム（英: Polymorphism）とは、プログラミング言語の型システムの性質を表すもので、プログラミング言語の各要素（定数、変数、式、オブジェクト、関数、メソッドなど）についてそれらが**複数の型に属することを許す**という性質を指す。
+オブジェクト指向における
+**ポリモーフィズム**とは、プログラミング言語の持つ性質の一つで、ある関数や[メソッド](https://e-words.jp/w/%E3%83%A1%E3%82%BD%E3%83%83%E3%83%89.html "メソッド")などが、[引数](https://e-words.jp/w/%E5%BC%95%E6%95%B0.html "引数")や[返り値](https://e-words.jp/w/%E6%88%BB%E3%82%8A%E5%80%A4.html "返り値")の数や[データ型](https://e-words.jp/w/%E3%83%87%E3%83%BC%E3%82%BF%E5%9E%8B.html "データ型")などの異なる複数の実装を持ち、呼び出し時に使い分けるようにできること。
+
+# 具体例
+
+## 1. 同インターフェースと異なる型の多態勢
+
+```python
+
+>>> 1+2
+3
+
+>>> "あ"+"い"
+'あい'
+
+```
+
+## 2. 
 
 # ポリモーフィズムの例
 
