--- a/ツール/アクセス解析ツール/なぜ直帰率がなくなったか.md
+++ b/ツール/アクセス解析ツール/なぜ直帰率がなくなったか.md
@@ -3,12 +3,14 @@
 # 直帰率の果たしてきた役割
 
 - サイトに対する「ユーザーの満足度」を知るための重要な指標と位置付けられてきた。
-- しかし近年消費者の行動が変化し、ユーザーがサイトから離脱することはあっても、同サービス内に滞在することが一般的になった。
-- そのため、ユーザーが単一のサイトから離脱した後も**サイト横断**を重要視するようになった。
+- どれくらいページに滞在しているかが、アクセス解析の重要な指標であった。
 
 # 直帰率はなぜ消滅したか
 
-- 分析の**軸**が、ページ単位 → ユーザーのアクションに変換
+- ユーザーがサイトから**離脱すること**はあっても、同サービス内に**滞在すること**が一般的になった。
+- 動画、アプリ、ECなど、アクセス解析の責務が拡大した。
+- 分析の**軸**が、ページ単位 → ユーザーのアクションに変更された。
+- ユーザーが単一のサイトから離脱した後も**サイト横断**を重要視するようになった。
 
 # Reference
 
