:+1:Add top image.png

--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -49,7 +49,7 @@ PM業務兼プログラマーは未熟な僕にとっては中々にハードな
 今の会社に就職できなかったら『ぼくのあたまのなか』は存在しなかったと思います。
 
 ここでは僕の学んできたこと（[[技術]]） や[[趣味]]、[[考えていること]]、
-作ってきたもの（[[Products 1]]） を発信したり、
+作ってきたもの（[[Products]]） を発信したり、
 人生の[[失敗談]]や統計についての知見をまとめていこうと思います。
 
 一番力を入れたいところは、[[技術]] で、
