--- a/ツール/アクセス解析ツール/アクセス解析ツール.md
+++ b/ツール/アクセス解析ツール/アクセス解析ツール.md
@@ -7,8 +7,6 @@ WebサービスやECサイトの売上向上には、
 ここでは、次の標準的なアクセス解析ツールを用いて、
 自社サービスのユーザーを分析するための手法、システム設計について説明します。
 
-また、
-
 # アクセス解析ツールと特徴
 
 - [[Google Analytics 4]]
@@ -17,12 +15,13 @@ WebサービスやECサイトの売上向上には、
 	- 予測オーディエンス（Google機械学習モデルを用いた予測が可能）
 	- デフォルトの指標は、Googleが選出した使用頻度の高いものとなった
 	- 直帰率という概念が消滅 ( 👉 [[なぜ直帰率がなくなったか]])
-	- Webページだけでなく、動画・アプリを含めた複合的な分析が可能
+	- Webサイトだけでなく、動画・アプリ・ECサイト等を含めた複合的な分析が可能
 - [[Google Analytics 360(UA)]]
 	- Google旧世代のアクセス解析ツール
 	- 分析者が分析軸を任意に設定するカスタムディメンションを採用
 	- 
 - [[Firebase Analytics]]
+	- 
 -  `Adobe Analytics` 
 
 # アクセス解析の流れ
@@ -65,6 +64,7 @@ Webアプリであろうとモバイルアプリであろうと、
 - ユーザーの会員ランク
 
 # 取得データをどのように扱うか？
+
 
 さて、ユーザー分析
 
