:+1:Add top image.png

--- a/Me/はじめまして.md
+++ b/Me/はじめまして.md
@@ -1,5 +1,6 @@
 #TBD #Me 
 
+
 [ぼくのあたまのなか](https://publish.obsidian.md/panicyusuke/Me/%E3%81%AF%E3%81%98%E3%82%81%E3%81%BE%E3%81%97%E3%81%A6)ようこそ！
 
 ぼくのあたまのなかは、【ぼくのかんがえたさいきょうのナレッジベース】です！
@@ -129,3 +130,5 @@ PCから『ぼくのあたまのなか』に訪れた人は、
 - [[アナリストへの道]]
 - [[考えていること]]
 - [[失敗談]]
+- [[Products]]
+- [[ツール]]
