--- a/ツール/アクセス解析ツール/なぜ直帰率がなくなったか.md
+++ b/ツール/アクセス解析ツール/なぜ直帰率がなくなったか.md
@@ -11,22 +11,9 @@
 - 動画、アプリ、ECなど、アクセス解析の責務が拡大した。
 - 分析の**軸**が、ページ単位 → ユーザーのアクションに変更された。
 - ユーザーが単一のサイトから離脱した後も**サイト横断**を重要視するようになった。
+- 分析の考え方が、ページ単位の分析 → アプリ（Web, モバイル）単位の分析となった
 
 # Reference
 
-<div class="rich-link-card-container"><a class="rich-link-card" href="https://marketing-x.goo.ne.jp/blog/webanalytics/google-analytics4-bounce-rate-relationship/" target="_blank">
-	<div class="rich-link-image-container">
-		<div class="rich-link-image" style="background-image: url('https://marketing-x.goo.ne.jp/wp-content/uploads/2021/08/google_analytics4_bounce_rate_relationship.jpg')">
-	</div>
-	</div>
-	<div class="rich-link-card-text">
-		<h1 class="rich-link-card-title">GA4で直帰率が計測できなくなった！？「エンゲージメント」関連指標と直帰率の関係は？ | marketing X by goo</h1>
-		<p class="rich-link-card-description">
-		話題のGA4を導入したけど直帰率の指標がどこにもない…これまで多くの分析で利用されていた「直帰率」が突然使えなくなり、ランディングページに対するユーザーの評価を把握しづらくなったと感じている方もいらっしゃるかもしれません。ですが、実は直帰率が新たな名称でGA4にも存在しているのはご存じでしょうか。その名も「エンゲージメント」です。そこで、今回は、これまで直帰率を使って読み解いていたユーザーの行動を
-		</p>
-		<p class="rich-link-href">
-		https://marketing-x.goo.ne.jp/blog/webanalytics/google-analytics4-bounce-rate-relationship/
-		</p>
-	</div>
-</a></div>
+- [GA4で直帰率が計測できなくなった！？「エンゲージメント」関連指標と直帰率の関係は？ ](https://marketing-x.goo.ne.jp/blog/webanalytics/google-analytics4-bounce-rate-relationship/)
 
