--- a/ツール/アクセス解析ツール/アクセス解析ツール.md
+++ b/ツール/アクセス解析ツール/アクセス解析ツール.md
@@ -10,18 +10,9 @@ WebサービスやECサイトの売上向上には、
 # アクセス解析ツールと特徴
 
 - [[Google Analytics 4]]
-	- Google最新のアクセス解析ツール
-	- Googleアカウントと連携した匿名化によるプライバシー重視のデータ収集
-	- 予測オーディエンス（Google機械学習モデルを用いた予測が可能）
-	- デフォルトの指標は、Googleが選出した使用頻度の高いものとなった
-	- 直帰率という概念が消滅 ( 👉 [[なぜ直帰率がなくなったか]])
-	- Webサイトだけでなく、動画・アプリ・ECサイト等を含めた複合的な分析が可能
 - [[Google Analytics 360(UA)]]
-	- Google旧世代のアクセス解析ツール
-	- 分析者が分析軸を任意に設定するカスタムディメンションを採用
-	- 
 - [[Firebase Analytics]]
-	- 
+	- 不明、なんだこれ。完全にGAの上に乗っかっているシステム。わざわざFirebase Analyticsに移行する理由が現時点でわからない。
 -  `Adobe Analytics` 
 
 # アクセス解析の流れ
